--- a/Lib1/src/main/res/layout/mylib_main_activity.xml
+++ b/Lib1/src/main/res/layout/mylib_main_activity.xml
@@ -41,5 +41,11 @@
         android:layout_gravity="center_horizontal"
         android:onClick="btnFlexibleActivity"
         android:text="FlexibleListView" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:onClick="btnScrollActivity"
+        android:text="ScrollTestActivity" />
 
 </LinearLayout>
